--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -9,4 +9,9 @@ server {
     location / {
         proxy_pass http://backend;
     }
+
+    location /static/ {
+        root /var/html/;
+        autoindex on;
+    }
 }
