--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,30 +9,20 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
 
-  backend:
-    # image: certelen/project:latest
-    build: ../backend
-    restart: always
-    environment:
-      - DB_NAME=postgres
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=db
-      - DB_PORT=5432
-      - SECRET=secret
-
   telegram:
-    # image: certelen/project:latest
     build: ../telegram
     restart: always
-    environment:
-      - DB_NAME=postgres
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=db
-      - DB_PORT=5432
-      - HOST=http://127.0.0.1:8000/
-      - TG_TOKEN=BOT_TOKEN
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/static/media/
+
+  backend:
+    build: ../backend
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/static/media/
+
   nginx:
     image: nginx:1.21.3-alpine
     restart: always
@@ -40,11 +30,13 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - backend
-      - frontend
+      - telegram
 
 volumes:
   db_data:
-
-
+  static_value:
+  media_value:
